ADD function to modify agilent sample ID's to match DD format of sample tracker. ADD agilent experiment timeline viz
Former-commit-id: dd6da90a5bad76d68deb7e0d07e218906dab5847
Former-commit-id: 50dad6dd73a387c116698190e5b5496a70d9de86

--- a/notebooks/2023-03-30_testing-loading-full-library-spectrum.ipynb
+++ b/notebooks/2023-03-30_testing-loading-full-library-spectrum.ipynb
@@ -43,7 +43,8 @@
     "import sys\n",
     "sys.path.append('../')\n",
     "from pathlib import Path\n",
-    "import pandas as pd \n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "from agilette.modules.library import Library\n"
    ]
@@ -120,6 +121,7 @@
     "    return tracker_df\n",
     "\n",
     "tracker_df = get_sample_tracker()\n",
+    "tracker_df = tracker_df.replace(\"\", np.nan)\n",
     "tracker_df.head()"
    ]
   },
@@ -192,8 +194,9 @@
     "    \n",
     "# todo: add subsetter to pipeline.\n",
     "avantor_df = (avantor_df.pipe(dataframe_cleaner, col_name='id'))\n",
+    "tracker_df = (tracker_df.pipe(dataframe_cleaner, col_name='id'))\n",
     "\n",
-    "avantor_df.head()"
+    "tracker_df.head()"
    ]
   },
   {
@@ -201,7 +204,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is a number of NaN's in the avantor_df, which is surprising. Presumably if there is no name in the xml file it is recorded as NaN after forming the dataframe. How many?\n"
+    "To form the link between `tracker_df` and `avantor_df`, I need to have an understanding of what happened when, and draw a link between sample dates, wine names, and ids. First though we can reconcile the formats of the id numbers. In tracker_df they have the format \"DD\" where D is a digit, but in avantor_df they are either empty, \"DD\" \"00DD\", or other. What methods are there of finding patterns in strings in a column?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Identifying Patterns in Strings in a Column\n",
+    "\n"
    ]
   },
   {
@@ -210,7 +222,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "avantor_df.info()"
+    "pd.set_option('display.max_rows', None)\n",
+    "\n",
+    "for idx, row in tracker_df.iterrows():\n",
+    "    print(row['id'], end=', ')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`tracker_df['id']` has pattern \"D\", \"DD\", or \"zD\"."
    ]
   },
   {
@@ -219,7 +242,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "avantor_df[avantor_df['id'].isna()].describe()"
+    "for idx, row in avantor_df.iterrows():\n",
+    "    print(row['id'], end=', ')"
    ]
   },
   {
@@ -227,9 +251,80 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So out of 101, 31 have names that are are NaN, all the way through the dataset.\n",
+    "Avantor DF starts with DDDD, goes to DD, then \"string\", DD, \"string\". Tbh there should be more DD after those, looks like im missing files? Anyway. To rectify this, we need to:\n",
+    "1.  [x] pad tracker_df to be DD\n",
+    "2. [x] drop the first and last digits on the first 19 rows of avantor df.\n",
+    "3. replace the strings with DD."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### 1 Pad Tracker_DF to be DD. Can use `pd.Series.str.pad`\n",
     "\n",
-    "I need an overview to get what's going on. A visualisation would be useful."
+    "def pad_id(df : pd.DataFrame) -> pd.DataFrame:\n",
+    "    return df['id'].str.pad(2, fillchar='0')\n",
+    "\n",
+    "tracker_df['id'] = pad_id(tracker_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 2. subset first 19 rows of avantor df (identify that group, probs by acq_date), drop first and last digits of id through slicing.\n",
+    "\n",
+    "four_digit_ids = avantor_df[avantor_df['id'].str.len() ==4].sort_values('acq_date')\n",
+    "\n",
+    "# ranges from the 02-14 13:18:27 to 02-16 12:45:35. Is this the same as all values within that range?\n",
+    "\n",
+    "avantor_four_digit_id_range = avantor_df[(avantor_df['acq_date'] >= four_digit_ids.loc[four_digit_ids.index[0],'acq_date']) & (avantor_df['acq_date'] <= four_digit_ids.loc[four_digit_ids.index[-1],'acq_date'])].sort_values('acq_date')\n",
+    "\n",
+    "avantor_four_digit_id_range.equals(four_digit_ids)\n",
+    "\n",
+    "# confirmed that for those date ranges, all entries were four digit ids."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. replace the strings with DD.\n",
+    "\n",
+    "This is the most difficult. First find all which are names rather than numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "digit_mask = avantor_df['id'].str.isdigit()\n",
+    "avantor_df[~(avantor_df['id'].str.isdigit())].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tracker_df[tracker_df['name'].str.contains('crawford')]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Timeline of Experiments "
    ]
   },
   {
@@ -277,16 +372,6 @@
    "metadata": {},
    "source": [
     "## Aligning IDs Across Tables."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.options.display.max_rows = 105\n",
-    "tracker_df['id']"
    ]
   }
  ],
