ADD replacing Z3 id with 00, notes planning how to replace the rest of the string ids with digits.
Former-commit-id: 567866aecd0ffce1515507d891f7941de2a7a6bc
Former-commit-id: 63f2f4431d48bae755d7280fa338d3990bdcf6e0

--- a/notebooks/2023-03-30_testing-loading-full-library-spectrum.ipynb
+++ b/notebooks/2023-03-30_testing-loading-full-library-spectrum.ipynb
@@ -120,9 +120,12 @@
     "\n",
     "    return tracker_df\n",
     "\n",
-    "tracker_df = get_sample_tracker()\n",
+    "#tracker_df = get_sample_tracker()\n",
+    "# 2023-04-03-09-01 reading the local file today because I dont have internet.\n",
+    "tracker_df = pd.read_csv('../2023-03-28_backup_sample_tracker.csv')\n",
     "tracker_df = tracker_df.replace(\"\", np.nan)\n",
-    "tracker_df.head()"
+    "tracker_df.head()\n",
+    "\n"
    ]
   },
   {
@@ -317,6 +320,155 @@
    "outputs": [],
    "source": [
     "tracker_df[tracker_df['name'].str.contains('crawford')]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After checking \"sample_tracker\" for the 5 samples with string id's, I discovered that these 5 had never been logged. This is because at the time, they were just screening samples when I was worried that he column was damaged. Refer to [2023-02-21_logbook](file:///Users/jonathan/001_obsidian_vault/mres_logbook/2023-02-22_logbook.md).\n",
+    "\n",
+    "Simplest solution will be to enter them with new IDs.\n",
+    "\n",
+    "Note: can't update sample tracker until I get some internet. In the meantime just add them directly to the df. The names are:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for idx, row in avantor_df[~(avantor_df['id'].str.isdigit())].iterrows():\n",
+    "    print(row['id'], end = \", \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "avantor_df[~(avantor_df['id'].str.isdigit())].sort_values('acq_date')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The 02-21 refers to the sampling date, as the logbook was on Tuesday 22nd. Thus they can be added to the tracker table as:\n",
+    "\n",
+    "wine_name | sample_date.\n",
+    "\n",
+    "1. Get the ID column cell.\n",
+    "2. split on \"_\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tracker_df.sort_index()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To make working with tracker_df id column easier, I'm going to replace z3 with '00'. NC isnt even in the table, but once it is entered, I will add it at the end."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zema_mask = tracker_df['name'] == \"zema estate 'family selection' cabernet sauvignon\"\n",
+    "\n",
+    "tracker_df.loc[zema_mask,['id']] = '00'\n",
+    "tracker_df[zema_mask]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tracker_df.sort_values('id').tail()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So the next id available is 72."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "avantor_df[~(avantor_df['id'].str.isdigit())].sort_values('acq_date')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now I need to:\n",
+    "\n",
+    "1. add wines to sample_tracker.\n",
+    "2. rename wines in avantor_df.\n",
+    "\n",
+    "The fields I need in tracker_df are: 'id', 'vintage', 'name', 'sample_date', 'open_date'.\n",
+    "\n",
+    "Sample date is acq_date.\n",
+    "\n",
+    "1. Make a new df from tracker_df with the wines that are not digit id. In that df get:\n",
+    "    1. acq_date.\n",
+    "    2. id\n",
+    "2. Add a column with the proper name based on fuzzy searching on tracker_df 'name'.\n",
+    "3. Add a col 'id_new' with with range >72.\n",
+    "3. Add 'name', 'id', 'acq_date' to tracker_df, concat vertically.\n",
+    "4. rename id in avantor_df with id_new.\n",
+    "    \n",
+    "Now where did my fuzzy match function go..?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# relabel z3 to 00.\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Koerner Nielluccio. "
    ]
   },
   {
