EDIT moved 'timeline_of_experiments' to its own notebook, cleaned up 'testing_loading..' added hardcoded full wine names and id's to avantor_df, finished the id slicing section.
Former-commit-id: dc032da09c76a6d67a75fb1e4a844870cc3d3037
Former-commit-id: 49e1b0ef24881b98306a3b15fb735adf5fd34f27

--- a/notebooks/2023-03-30_testing-loading-full-library-spectrum.ipynb
+++ b/notebooks/2023-03-30_testing-loading-full-library-spectrum.ipynb
@@ -68,6 +68,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Selecting UV Wine Runs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -101,6 +108,14 @@
     "70 unique samples doesn't seem too bad. There should be more to pull sitting in the instrument as well. It appears that this filter is legitimate, as there is UV data for every remaining row.\n",
     "\n",
     "Now, one sticking point is that we don't have the wine names in this table. To get them we will need to load the sample tracker as a df and merge them on the sample ID., or 'name' in this dataframe. A further complicating factor is that the names are sometimes not consistant with sample tracker, for example '2021-debortoli-cabernet-merlot_avantor`. I dont believe it was ever added, and it makes up 7/107 of the runs. Let's first load sample_tracker then compare their contents."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importing Sample Tracker Table"
    ]
   },
   {
@@ -141,7 +156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To join `sample_tracker` with `metadata_table` I need to do the following:\n",
+    "To join `tracker_df` with `avantor_df` I need to do the following:\n",
     "1. Ensure they are the same datatype.\n",
     "2. Clear whitespace.\n",
     "3. Sort.\n",
@@ -225,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.set_option('display.max_rows', None)\n",
+    "#pd.set_option('display.max_rows', None)\n",
     "\n",
     "for idx, row in tracker_df.iterrows():\n",
     "    print(row['id'], end=', ')"
@@ -261,6 +276,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Padding Sample Tracker ID Column"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -275,13 +298,21 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Slicing 4 Digit ID's in `avantor_df`\n",
+    "\n",
+    "subset first 19 rows of avantor df (identify that group, probs by acq_date), drop first and last digits of id through slicing."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## 2. subset first 19 rows of avantor df (identify that group, probs by acq_date), drop first and last digits of id through slicing.\n",
-    "\n",
     "four_digit_ids = avantor_df[avantor_df['id'].str.len() ==4].sort_values('acq_date')\n",
     "\n",
     "# ranges from the 02-14 13:18:27 to 02-16 12:45:35. Is this the same as all values within that range?\n",
@@ -289,7 +320,6 @@
     "avantor_four_digit_id_range = avantor_df[(avantor_df['acq_date'] >= four_digit_ids.loc[four_digit_ids.index[0],'acq_date']) & (avantor_df['acq_date'] <= four_digit_ids.loc[four_digit_ids.index[-1],'acq_date'])].sort_values('acq_date')\n",
     "\n",
     "avantor_four_digit_id_range.equals(four_digit_ids)\n",
-    "\n",
     "# confirmed that for those date ranges, all entries were four digit ids."
    ]
   },
@@ -298,8 +328,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. replace the strings with DD.\n",
+    "Now to perform the slice."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "avantor_df['id'] = avantor_df['id'].apply(lambda x : x[2:4] if len(x)==4 else x)\n",
     "\n",
+    "display(avantor_df[avantor_df['id'].str.len()==4])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. replace the strings with DD."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This is the most difficult. First find all which are names rather than numbers."
    ]
   },
@@ -367,15 +422,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tracker_df.sort_index()"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -392,7 +438,7 @@
     "zema_mask = tracker_df['name'] == \"zema estate 'family selection' cabernet sauvignon\"\n",
     "\n",
     "tracker_df.loc[zema_mask,['id']] = '00'\n",
-    "tracker_df[zema_mask]"
+    "avantor_df.loc[avantor_df['id'] == 'z3', ['id']] = '00'"
    ]
   },
   {
@@ -435,48 +481,15 @@
     "\n",
     "Sample date is acq_date.\n",
     "\n",
-    "1. Make a new df from tracker_df with the wines that are not digit id. In that df get:\n",
+    "1. [x] Make a new df from tracker_df with the wines that are not digit id. In that df get:\n",
     "    1. acq_date.\n",
     "    2. id\n",
-    "2. Add a column with the proper name based on fuzzy searching on tracker_df 'name'.\n",
-    "3. Add a col 'id_new' with with range >72.\n",
-    "3. Add 'name', 'id', 'acq_date' to tracker_df, concat vertically.\n",
-    "4. rename id in avantor_df with id_new.\n",
+    "2. [x] Add a column with the proper name based on fuzzy searching on tracker_df 'name'.\n",
+    "3. [x] Add a col 'id_new' with with range >72.\n",
+    "3. [ ] Add 'name', 'id', 'acq_date' to tracker_df, concat vertically.\n",
+    "4. [ ] rename id in avantor_df with id_new.\n",
     "    \n",
-    "Now where did my fuzzy match function go..?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# relabel z3 to 00.\n",
-    "\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. Koerner Nielluccio. "
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Timeline of Experiments "
+    "Fuzzy match function detailed [here](2023-03-28-joining-cellartracker-metadata.ipynb)."
    ]
   },
   {
@@ -485,7 +498,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "avantor_df_date_sort = avantor_df.sort_values('acq_date')"
+    "string_ids = avantor_df[~(avantor_df['id'].str.isdigit())][['acq_date', 'id']]\n",
+    "string_ids"
    ]
   },
   {
@@ -494,36 +508,152 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import plotly.express as px\n",
-    "\n",
-    "avantor_df_date_sort['id'] = avantor_df_date_sort['id'].fillna('none')\n",
-    "\n",
-    "fig = px.scatter(avantor_df_date_sort, x = 'acq_date', y = 'id')\n",
-    "\n",
-    "# show the figure\n",
-    "fig.show()"
+    "string_ids = string_ids.rename({'id' : 'old_id'}, axis =1)"
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "That's a pretty useful representation. Now we can start renaming the id rows.\n",
-    "\n",
-    "From this point, we will be disconnecting from the source material. This is not a problem as the filepaths to the data files, but any further work should be done on this table directly rather than reloading from the source material.\n",
-    "\n",
-    "This introduces the question of how to integrate new data in. A question that will be answered later!\n",
-    "\n",
-    "For now, let's get the ids reconciled."
+    "tracker_df[tracker_df['name'].str.contains('stoney')]"
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Aligning IDs Across Tables."
+    "crawford = [2018, \"crawford river cabernets\", 73]\n",
+    "hey_malbec = [2020, \"matias riccitelli hey malbec\", 74]\n",
+    "stoney_rise_pn = [2021, \"stoney rise pinot noir\", 75]\n",
+    "koerner_nielluccio = [2021, 'koerner wine nielluccio sangiovese', 76]\n",
+    "debortoli = [2021, 'De Bertoli Sacred Hill Cabernet Merlot', 77]\n",
+    "nocturne  = [2021, 'Nocturne Cabernet', 78]\n",
+    "\n",
+    "wines_to_add = pd.DataFrame([crawford, hey_malbec, koerner_nielluccio,stoney_rise_pn, debortoli, nocturne], columns = ['vintage', 'name', 'id'])\n",
+    "wines_to_add"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "string_ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "string_ids = string_ids.rename({'id':'old_id'}, axis = 1)\n",
+    "string_ids['new_id'] = [77,73,73,77,74,76,76,78,75]\n",
+    "string_ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merge_df = pd.merge(string_ids, wines_to_add, left_on = 'new_id', right_on = 'id')\n",
+    "merge_id = merge_df.drop('id', axis =1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tracker_df = tracker_df.drop('Unnamed: 0', axis =1)\n",
+    "tracker_df.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merge_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merge_id = merge_id.rename({\"new_id\":\"id\"}, axis = 1)\n",
+    "merge_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tracker_df = tracker_df.rename({'new_id':'id'}, axis =1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(tracker_df.columns)\n",
+    "print(merge_id.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help(pd.DataFrame.append)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merge_id['acq_date'] = merge_id['acq_date'].dt.strftime('%Y-%m-%d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tracker_df = tracker_df.rename({\"sample_date\":\"acq_date\"}, axis =1)\n",
+    "\n",
+    "tracker_df = tracker_df.append(merge_id[['id', 'vintage','name', 'acq_date']], ignore_index=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merge_df_2 = pd.merge(avantor_df, string_ids, left_on='id', right_on = 'old_id', how = 'left')\n",
+    "merge_df_2['id'] = merge_df_2['new_id'].fillna(merge_df_2['id'])\n",
+    "merge_df_2 = merge_df_2.drop(columns=['new_id'])\n",
+    "merge_df_2.tail()"
    ]
   }
  ],
