notebook. Minor edits.
Former-commit-id: 32e8ad6c7cc2853a8d3b70b7e64611a76fe7ce00
Former-commit-id: 89a64cee3e8166e6660a0fdc7085b90de9202595

--- a/notebooks/2023-03-30_testing-loading-full-library-spectrum.ipynb
+++ b/notebooks/2023-03-30_testing-loading-full-library-spectrum.ipynb
@@ -131,16 +131,14 @@
     "    sheet_id = '15S2wm8t6ol2MRwTzgKTjlTcUgaStNlA22wJmFYhcwAY'\n",
     "    path_to_creds = '/Users/jonathan/wine_analysis_hplc_uv/credentials_tokens'\n",
     "\n",
-    "    tracker_df = get_sheets_values_as_df(sheet_id, \"sample_tracker!A1:H200\",path_to_creds)\n",
+    "    tracker_df = get_sheets_values_as_df(sheet_id, \"sample_tracker!A1:H200\", path_to_creds)\n",
     "\n",
     "    return tracker_df\n",
     "\n",
-    "#tracker_df = get_sample_tracker()\n",
+    "tracker_df = get_sample_tracker()\n",
     "# 2023-04-03-09-01 reading the local file today because I dont have internet.\n",
-    "tracker_df = pd.read_csv('../2023-03-28_backup_sample_tracker.csv')\n",
     "tracker_df = tracker_df.replace(\"\", np.nan)\n",
-    "tracker_df.head()\n",
-    "\n"
+    "tracker_df.head()"
    ]
   },
   {
@@ -199,9 +197,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. Rename avantor 'name' to 'id' for consistancy.\n",
-    "avantor_df = avantor_df.rename({'name' : 'id'}, axis = 1)\n",
-    "\n",
     "# clean the columns up, sort and drop duplicates\n",
     "\n",
     "def dataframe_cleaner(df : pd.DataFrame, col_name : str) -> pd.DataFrame:\n",
@@ -400,33 +395,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "avantor_df[~(avantor_df['id'].str.isdigit())].sort_values('acq_date')"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The 02-21 refers to the sampling date, as the logbook was on Tuesday 22nd. Thus they can be added to the tracker table as:\n",
-    "\n",
-    "wine_name | sample_date.\n",
-    "\n",
-    "1. Get the ID column cell.\n",
-    "2. split on \"_\""
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To make working with tracker_df id column easier, I'm going to replace z3 with '00'. NC isnt even in the table, but once it is entered, I will add it at the end."
+    "Because 'tracker_df.id' contains strings and string integers, I cannot sort properly. This is a secondary motivation for replacing the strings with integers. \"z3\" and \"NC\" are the main offenders, except that \"NC\" is not present in `tracker_df`, only `avantor_df`. \"z3\" will be replaced now with \"00\", as it was the first wine added to the library."
    ]
   },
   {
@@ -442,12 +415,59 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this manner, \"z3\" has been replaced by \"00\" in both `tracker_df` and `avantor_df`. The next step is to identify what the next available ID number is:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tracker_df.sort_values('id').tail()"
+    "display(avantor_df['id'].describe())\n",
+    "display(tracker_df['id'].describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dtale\n",
+    "\n",
+    "dtale.show(tracker_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tracker_df['id'] = tracker_df['id'].fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tracker_df[tracker_df.isna()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(tracker_df[tracker_df['id'].str.isdigit()])"
    ]
   },
   {
@@ -583,15 +603,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merge_id"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "merge_id = merge_id.rename({\"new_id\":\"id\"}, axis = 1)\n",
     "merge_id"
    ]
@@ -675,7 +686,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.11.1"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "27c46f4eb3a1e072bb472673e0f5bc67d135295985dc85bce54a4088e8c57ef4"
